--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 spring.mvc.view.prefix=/WEB-INF/
 spring.mvc.view.suffix=.jsp
+
+spring.datasource.url=jdbc:mysql://localhost:3306/application
+spring.datasource.username=root
+spring.datasource.password=rootpass
+
+#opcional
+spring.jpa.hibernate.ddl-auto=update
